--- a/utils/index.html
+++ b/utils/index.html
@@ -168,7 +168,7 @@
       </div>
       <p>Current Time: <span id="current-time"></span></p>
       <p>Bot online: <span id="uptime"></span></p>
-      <p>This bot was made by <a href="https://facebook.com/100077070762554" target="_blank">Jay Mar</a></p>
+      <p>This bot was made by <a href="https://facebook.com/100077070762554" target="_blank">Arjhil Dacayanan</a></p>
       <p id="ip-address">Loading IP...</p>
       <button id="btnToggleMusic">Turn on Music</button>
       <audio id="myMusic" loop>
