--- a/utils/index.html
+++ b/utils/index.html
@@ -177,7 +177,7 @@
       </audio>
     </div>
 
-    <footer>© 2024 | Heru | All rights reserved.</footer>
+    <footer>© 2024 | Kaguya | All rights reserved.</footer>
 
     <script>
       function updateUptime() {
