--- a/utils/index.html
+++ b/utils/index.html
@@ -12,7 +12,8 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
-        background: linear-gradient(to right, #4facfe, #00f2fe);
+        background: url('https://i.postimg.cc/3xv78Sbg/3864fd09f2076972fd8fbbb0afa48a8c.gif') no-repeat center center fixed;
+        background-size: cover;
         color: #fff;
         text-align: center;
         display: flex;
@@ -22,6 +23,8 @@
         height: 100vh;
         margin: 0;
         overflow: hidden;
+        background-blend-mode: overlay;
+        background-color: rgba(0, 0, 0, 0.5);
       }
       .happy-text {
         font-family: 'Montserrat', sans-serif;
@@ -35,10 +38,10 @@
       }
       @keyframes glow {
         from {
-          text-shadow: 0 0 10px #fff, 0 0 20px #00f2fe, 0 0 30px #00f2fe;
+          text-shadow: 0 0 10px #fff, 0 0 20px #f0f, 0 0 30px #f0f;
         }
         to {
-          text-shadow: 0 0 20px #fff, 0 0 30px #4facfe, 0 0 40px #4facfe;
+          text-shadow: 0 0 20px #fff, 0 0 30px #ff0, 0 0 40px #ff0;
         }
       }
       .content {
@@ -51,7 +54,7 @@
       .square-gif {
         width: 120px;
         height: 120px;
-        background: url('https://media.giphy.com/media/3o85xGocUH8RYoDKKs/giphy.gif') no-repeat center center;
+        background: url('https://i.postimg.cc/kXWQd4ZV/055da9916de8a45532209a4b7a36c9b4.gif') no-repeat center center;
         background-size: cover;
         border-radius: 15px;
         margin: 0 auto 20px;
@@ -154,7 +157,7 @@
     <div class="content">
       <div class="square-gif"></div>
       <img
-        src="https://i.imgur.com/q9oFNTk.jpeg"
+        src="https://i.postimg.cc/7YrzX46q/9ddb5c50fc1b25019921343128339ea3.jpg"
         alt="Profile"
       />
       <h1>Arjhil</h1>
@@ -172,7 +175,7 @@
       <p id="ip-address">Loading IP...</p>
       <button id="btnToggleMusic">Turn on Music</button>
       <audio id="myMusic" loop>
-        <source src="https://c.top4top.io/m_3173h5opl0.mp4" type="audio/mp3">
+        <source src="https://j.top4top.io/m_3181qko0n0.mp4" type="audio/mp3">
         Your browser does not support the audio element.
       </audio>
     </div>
