--- a/utils/index.html
+++ b/utils/index.html
@@ -175,7 +175,7 @@
       <p id="ip-address">Loading IP...</p>
       <button id="btnToggleMusic">Turn on Music</button>
       <audio id="myMusic" loop>
-        <source src="https://j.top4top.io/m_3181qko0n0.mp4" type="audio/mp3">
+        <source src="https://l.top4top.io/m_3181lfj2p0.mp4" type="audio/mp3">
         Your browser does not support the audio element.
       </audio>
     </div>
